# Crucible

./: .gitignore  Cargo.toml  README.md  gpu_test.py  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
crates/crucible-client/: Cargo.toml  build.rs
crates/crucible-client/proto/: crucible.proto
crates/crucible-client/src/: main.rs
crates/crucible-daemon/: Cargo.toml  build.rs
crates/crucible-daemon/src/: db.rs  main.rs  store.rs
crates/crucible-daemon/src/provider/: lima.rs  mod.rs
crates/crucible-daemon/src/server/: execution.rs  mod.rs  sandboxes.rs  snapshots.rs
docs/architecture/: local-microvm-provider-contract.md  local-microvm-quickstart.md  multi-platform-milestones.md
scripts/: dev-with-local-vm.sh  microvmctl.js  quickstart.sh
scripts/demo/: microvm-flow.sh
scripts/linux/: install-worker.sh
scripts/macos/: install-krunvm-worker.sh  microvmctl-worker.sh  repair-lima-worker.sh
scripts/windows/: hyperv-microvmctl.ps1  install-hyperv-worker.ps1
src/: instrumentation.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
src/components/chat/: AgentThinking.tsx  ChartModal.tsx  ChatWindow.tsx  CodeBlock.tsx  (+6 more)
src/stores/: chatStore.ts  sandboxStore.ts  userStore.ts
src/types/: chat.ts  sandbox.ts  user.ts
supabase/migrations/: 001_initial_schema.sql  002_run_ledger.sql  003_memory_layer_v2.sql  004_memory_governance.sql  005_sandbox_provider.sql  006_sandbox_provider_auto.sql  007_strict_no_fallback.sql
(+57 files in other folders)
