[package]
name = "crucible-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
prost = "0.13.4"
prost-types = "0.13.5"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
