[package]
name = "crucible-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
prost = "0.13.4"
prost-types = "0.13.5"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.12.3"
uuid = { version = "1.21.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
